# B0626---Ahmed-Fazil---Innovaxel---Backend-Developer

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: events.py  registrations.py
