[project]
name = "b0626-ahmed-fazil-innovaxel-backend-developer"
version = "0.1.0"
description = "Event Registration System API"
authors = [
    {name = "wydfaxil7"}
]
readme = "README.md"
requires-python = "3.14.3"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
